# tusk

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
tests/: test_script.py  test_script_err.py  test_slack.py  test_tusk.py
tests/test_tusk/: script_pass.py
tusk/: __init__.py  cli.py  runner.py  script.py  slack.py
