[tool.poetry]
name = "tusk"
version = "0.1.0"
description = "A tool to run and monitor tasks."
authors = ["nickc1 <nickcortale@gmail.com>"]
readme = "README.md"

[tool.poetry.scripts]
tusk = "tusk.cli:tusk"

[tool.poetry.dependencies]
python = "^3.8"
papermill = "^2.2.2"
click = "^7.1.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^20.8b1"
ipykernel = "^5.3.4"
flake8 = "^3.8.4"
pre-commit = "^2.9.3"

[tool.black]
line-length = 79
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"